# Open-Insect

./: .gitignore  README.md  download.py  download.sh  download_bci.py  download_pretrained_weights.py  download_pretrianed_weights.py  pyproject.toml  setup.py
configs/datasets/: c-america.yml  c-america_ood.yml  c-america_ood_test.yml  example.yml  example_c-america.yml  example_c-america_oe.yml  example_c-america_ood_test.yml  example_ood.yml
configs/networks/: resnet50.yml
configs/pipelines/test/: test_arpl.yml  test_ood.yml  test_opengan.yml
configs/pipelines/train/: train_arpl.yml  train_binary.yml  train_cider.yml  train_conf_branch.yml  train_contrastive.yml  train_energy.yml  train_extended.yml  train_godin.yml  train_logitnorm.yml  train_mos.yml  train_novel_branch.yml  train_opengan.yml  train_opengan_feat_extract.yml  train_osr_branch.yml  (+1 more)
configs/postprocessors/: nci.yml  react.yml
configs/preprocessors/: base_preprocessor.yml
data/: ne-america_category_map.json  w-europe_category_map.json
example/: ood.csv
example/metadata/: test_id.txt  test_ood_local.txt  test_ood_non-moth.txt  train_aux.txt  train_id.txt  val_ood.txt
metadata/: c-america_id_class_distribution.json  ne-america_id_class_distribution.json  test_ood_non-local.txt  val_id.txt  w-europe_id_class_distribution.json
scripts/: eval.sh  eval_arpl.sh  eval_opengan.sh  eval_trained.py  finetune.sh  main.py  test_eval_script.sh  train.sh  train_with_aux_data.sh
scripts/examples/: eval.sh  train.sh  train_with_aux_data.sh
src/: checkpoint_helper.py  evaluator.py  pipeline_init.py
(+48 files in other folders)
